HW-16: fixes after review
