# internal/main.go
@@ -89,10 +89,10 @@ func main() {
 	pasteService := service.NewPasteService(postgresStorage, redisLogger, statsService, shortURLService)
 	userService := service.NewUserService(postgresStorage, redisLogger)
 
-	handlers.Paste = handlers.NewPasteHandler(pasteService)
-	handlers.User = handlers.NewUserHandler(userService)
-	handlers.Stats = handlers.NewStatsHandler(statsService)
-	handlers.ShortURL = handlers.NewShortURLHandler(shortURLService, pasteService, statsService)
+	pasteHandler := handlers.NewPasteHandler(pasteService, statsService)
+	userHandler := handlers.NewUserHandler(userService)
+	statsHandler := handlers.NewStatsHandler(statsService, pasteService)
+	shortURLHandler := handlers.NewShortURLHandler(shortURLService, pasteService, statsService)
 
 	stop := make(chan os.Signal, 1)
 	signal.Notify(stop, os.Interrupt, syscall.SIGTERM)
@@ -100,27 +100,27 @@ func main() {
 	router := mux.NewRouter()
 	api := router.PathPrefix("/api").Subrouter()
 
-	api.HandleFunc("/paste", handlers.Paste.CreatePasteHandler).Methods(http.MethodPost)
-	api.HandleFunc("/paste/{id}", handlers.Paste.DeletePasteHandler).Methods(http.MethodDelete)
-	api.HandleFunc("/paste/{id}", handlers.Paste.GetPasteByIDHandler).Methods(http.MethodGet)
-	api.HandleFunc("/paste/hash/{hash}", handlers.Paste.GetPasteByHashHandler).Methods(http.MethodGet)
-	api.HandleFunc("/paste/popular", handlers.Stats.GetPopularPastesHandler).Methods(http.MethodGet)
+	api.HandleFunc("/paste", pasteHandler.CreatePasteHandler).Methods(http.MethodPost)
+	api.HandleFunc("/paste/popular", statsHandler.GetPopularPastesHandler).Methods(http.MethodGet)
+	api.HandleFunc("/paste/{id}", pasteHandler.DeletePasteHandler).Methods(http.MethodDelete)
+	api.HandleFunc("/paste/{id}", pasteHandler.GetPasteByIDHandler).Methods(http.MethodGet)
+	api.HandleFunc("/paste/hash/{hash}", pasteHandler.GetPasteByHashHandler).Methods(http.MethodGet)
 
-	api.HandleFunc("/user", handlers.User.GetUsersHandler).Methods(http.MethodGet)
-	api.HandleFunc("/user/{id}", handlers.User.GetUserByIDHandler).Methods(http.MethodGet)
-	api.HandleFunc("/user", handlers.User.CreateUserHandler).Methods(http.MethodPost)
-	api.HandleFunc("/user/{id}", handlers.User.DeleteUserHandler).Methods(http.MethodDelete)
+	api.HandleFunc("/user", userHandler.GetUsersHandler).Methods(http.MethodGet)
+	api.HandleFunc("/user/{id}", userHandler.GetUserByIDHandler).Methods(http.MethodGet)
+	api.HandleFunc("/user", userHandler.CreateUserHandler).Methods(http.MethodPost)
+	api.HandleFunc("/user/{id}", userHandler.DeleteUserHandler).Methods(http.MethodDelete)
 
-	api.HandleFunc("/stats", handlers.Stats.GetAllStatsHandler).Methods(http.MethodGet)
-	api.HandleFunc("/stat/{id}", handlers.Stats.GetStatsByIDHandler).Methods(http.MethodGet)
-	api.HandleFunc("/stats", handlers.Stats.CreateStatsHandler).Methods(http.MethodPost)
-	api.HandleFunc("/stat/{id}", handlers.Stats.DeleteStatsHandler).Methods(http.MethodDelete)
+	api.HandleFunc("/stats", statsHandler.GetAllStatsHandler).Methods(http.MethodGet)
+	api.HandleFunc("/stat/{id}", statsHandler.GetStatsByIDHandler).Methods(http.MethodGet)
+	api.HandleFunc("/stats", statsHandler.CreateStatsHandler).Methods(http.MethodPost)
+	api.HandleFunc("/stat/{id}", statsHandler.DeleteStatsHandler).Methods(http.MethodDelete)
 
-	api.HandleFunc("/shorturls", handlers.ShortURL.GetAllShortURLsHandler).Methods(http.MethodGet)
-	api.HandleFunc("/shorturl/{id}", handlers.ShortURL.GetShortURLByIDHandler).Methods(http.MethodGet)
-	api.HandleFunc("/shorturl/{id}", handlers.ShortURL.DeleteShortURLHandler).Methods(http.MethodDelete)
-	api.HandleFunc("/shorturl/{hash}", handlers.ShortURL.CreateShortURLHandler).Methods(http.MethodPost)
-	router.HandleFunc("/s/{code}", handlers.ShortURL.ResolveShortURLHandler).Methods(http.MethodGet)
+	api.HandleFunc("/shorturls", shortURLHandler.GetAllShortURLsHandler).Methods(http.MethodGet)
+	api.HandleFunc("/shorturl/{id}", shortURLHandler.GetShortURLByIDHandler).Methods(http.MethodGet)
+	api.HandleFunc("/shorturl/{id}", shortURLHandler.DeleteShortURLHandler).Methods(http.MethodDelete)
+	api.HandleFunc("/shorturl/{hash}", shortURLHandler.CreateShortURLHandler).Methods(http.MethodPost)
+	router.HandleFunc("/s/{code}", shortURLHandler.ResolveShortURLHandler).Methods(http.MethodGet)
 
 	router.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
 
